<resources>
    <string name="app_name">Pregnant Woman</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">SUBMIT</string>
    <string name="next">NEXT</string>
    <string name="dk">DONT KNOW</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="reason">enter reason</string>
    <string name="disease">Enter Disease</string>
    <string name="unnecessary">Unnecessary</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="others">Other</string>
    <string name="crf1_q18_english">Reason for exam</string>
    <string name="crf1_q18_urdu">Imthan ki wajha</string>
    <string name="crf1_q18_opt1">Gestational age</string>
    <string name="crf1_q18_opt2">Multiple pregnancy</string>
    <string name="crf1_q18_opt3">Thr./missed abortion</string>
    <string name="crf1_q18_opt4">Fetal death</string>
    <string name="crf1_q18_opt5">Presentation</string>
    <string name="crf1_q18_opt6">Placental localization</string>
    <string name="crf1_q18_opt7">Hydatidiform mole</string>
    <string name="crf1_q18_opt8">Fetal growth retardation</string>
    <string name="crf1_q18_opt9">Fetal abnormality</string>
    <string name="crf1_q18_opt10">Other</string>
    <string name="crf1_q19_englisg">Number of fetuses</string>
    <string name="crf1_q19_opt4">Not recorded</string>
    <string name="crf1_q20_englisg">Lie</string>
    <string name="crf1_q20_opt1">Longitudinal</string>
    <string name="crf1_q20_opt2">Transverse</string>
    <string name="crf1_q20_opt3">Oblique</string>
    <string name="crf1_q20_opt4">Not determined yet</string>
    <string name="crf1_q20_opt5">Not recorded</string>
    <string name="crf1_q21_englisg">Presentation</string>
    <string name="crf1_q21_opt1">Cephalic</string>
    <string name="crf1_q21_opt2">Breech</string>
    <string name="crf1_q21_opt3">Shoulder</string>
    <string name="crf1_q21_opt4">Not determined yet</string>
    <string name="crf1_q21_opt5">Not recorded</string>
    <string name="crf1_q22_englisg">Fetal Heartbeat</string>
    <string name="crf1_q22_opt1">Present</string>
    <string name="crf1_q22_opt2">Absent</string>
    <string name="crf1_q22_opt3">Not recorded</string>
    <string name="crf1_q23_englisg">Fetal Movement</string>
    <string name="crf1_q23_opt1">Present</string>
    <string name="crf1_q23_opt2">Absent</string>
    <string name="crf1_q23_opt3">Not recorded</string>
    <string name="crf1_q24_englisg">Size of gestational sac</string>
    <string name="crf1_q25_englisg">Crown-rump length (CRL)</string>
    <string name="crf1_q26_englisg">Biparietal diameter (BPD)</string>
    <string name="crf1_q27_englisg">Head circumference (HC)</string>
    <string name="crf1_q28_englisg">Abdominal circumference (AC)</string>
    <string name="crf1_q29_englisg">Femur length (FL)</string>
    <string name="crf1_q30_englisg">Gestational age</string>
    <string name="crf1_q31_englisg">Estimated fetal weight</string>
    <string name="crf1_q32_englisg">Amount of liquor</string>
    <string name="crf1_q33_englisg">Amount of liquor</string>
    <string name="crf1_q34_englisg">Fetal spine</string>
    <string name="crf1_q35_englisg">Placental localization \nMultiple option can be selected</string>
    <string name="crf1_q35_opt_1">Fundus</string>
    <string name="crf1_q35_opt_2">Anterior wall</string>
    <string name="crf1_q35_opt_3">Posterior wall</string>
    <string name="crf1_q35_opt_4">Right wall</string>
    <string name="crf1_q35_opt_5">Left wall</string>
    <string name="crf1_q35_opt_6">On lower segment</string>
    <string name="crf1_q35_opt_7">Uterine wall not encroaching</string>
    <string name="crf1_q35_opt_8">Placenta low lying, covering int. Os</string>
    <string name="crf1_q35_opt_9">Placenta low lying, not covering int. Os</string>
    <string name="crf1_q35_opt_10">Not low lying</string>
    <string name="crf1_q35_opt_11">Placenta previa</string>
    <string name="crf1_q36_englisg">Placental location (remarks)</string>
    <string name="crf1_q37_englisg">Main remarks</string>
    <string name="crf2_q17_englisg">Outcome of the interview</string>
    <string name="crf2_q17_urdu">visit ka natija</string>
    <string name="crf2_q17_opt_1">Agree for this visit (Razamand ha visit k liya)</string>
    <string name="crf2_q17_opt_2">Not at home (Ghar par moujoud nahi)</string>
    <string name="crf2_q17_opt_3">Refused (Inkaar kar diya)</string>
    <string name="crf2_q17_opt_4">False pregnancy (Ghalt khabar th hamaal k)</string>
    <string name="crf2_q17_opt_5">Shifted out of DSS (DSS sa bahir shift ho gaya)</string>
    <string name="crf2_q18_englisg">Is PW alive</string>
    <string name="crf2_q18_urdu">Kya PW zinda hain?</string>
    <string name="crf2_q19_englisg">Date of death</string>
    <string name="crf2_q19_urdu">null</string>
    <string name="crf2_q20_englisg">Time of death</string>
    <string name="crf2_q20_urdu">null</string>
    <string name="crf2_q21_englisg">Is GA of the woman is ≥8 week and &gt;19</string>
    <string name="crf2_q21_urdu">null</string>
    <string name="crf2_q22_englisg">Fetus alive, according to the ultrasound</string>
    <string name="crf2_q22_urdu">null</string>
    <string name="crf2_q23_englisg">Singleton pregnancy</string>
    <string name="crf2_q23_urdu">null</string>
    <string name="crf2_q32_englisg">Conversion of Q31 in meters</string>
    <string name="crf2_q32_urdu">null</string>
    <string name="crf2_q33_englisg">Square of Q32</string>
    <string name="crf2_q33_urdu">v</string>
    <string name="crf2_q34_englisg">Body mass index of PW</string>
    <string name="crf2_q34_urdu">null</string>
    <string name="crf2_q35_englisg">PW is a permanent resident of DSS</string>
    <string name="crf2_q35_urdu">Kya PW Hamesha k lia Isi DSS m rahay ge?</string>
    <string name="crf2_q36_englisg">PW willing to stay within DSS until delivery?</string>
    <string name="crf2_q36_urdu">Kya PW isi DSS main rahay ge jab tak delivery ho nahi jati?</string>
    <string name="crf2_q37_englisg">PW is working outside the home due to which she is unable to attend ANC visits?</string>
    <string name="crf2_q37_urdu">null</string>
    <string name="crf2_q38_englisg">Was PW enrolled in Maamta PW trial in the past</string>
    <string name="crf2_q38_urdu">null</string>
    <string name="crf2_q39_englisg">Was PW enrolled in Maamta LW trial in the past</string>
    <string name="crf2_q39_urdu">null</string>
    <string name="crf2_q40_englisg">PW has any known allergy to food items like peanut, milk, lentils</string>
    <string name="crf2_q40_urdu">null</string>
    <string name="crf2_q41_opt_1">GA of the woman is ≥8 week and &gt;19 (Q21≥8 week and &gt;19)</string>
    <string name="crf2_q41_opt_2">Alive fetus (Q22=1)</string>
    <string name="crf2_q41_opt_3">Singleton pregnancy (Q23=1)</string>
    <string name="crf2_q41_opt_4">BMI of PW is &gt; 30.0 Kg/m2 (Q34 is &gt;30.0)</string>
    <string name="crf2_q41_opt_5">PW is a permanent resident of DSS (Q35=1)</string>
    <string name="crf2_q41_opt_6">PW continues to stay within DSS until birth outcome (Q36=1)</string>
    <string name="crf2_q41_opt_7">PW is not working outside the home due to which she is unable to attend ANC visits (Q37=2)</string>
    <string name="crf2_q41_opt_8">PW was not enrolled in Maamta PW trial in the past (Q38=2)</string>
    <string name="crf2_q41_opt_9">PW was not enrolled in Maamta LW trial in the pas (Q39=2)</string>
    <string name="crf2_q41_opt_10">PW has no known allergy to food items like peanut, milk, lentils (Q40=2)</string>
    <string name="crf2_q42_englisg">Explain all trial procedures </string>
    <string name="crf2_q42_urdu">Trial ka tareeqa samjha diya gaya ha</string>
    <string name="crf2_q43_englisg">Informed consent has administered and explained in local language</string>
    <string name="crf2_q43_urdu">Ijazat nama lay liya gaya ha LW sa us k apni zeban ma</string>
    <string name="crf2_q44_englisg">PW has given her consent to participate in the study?</string>
    <string name="crf2_q44_urdu">PW razamand ha k wo trial ma hissa lay gee</string>
    <string name="crf2_q45_englisg">PW has agreed to give specimens?</string>
    <string name="crf2_q45_urdu">PW razamand ha k wo apna and apnay bachay ka namoonay bh day gee</string>
    <string name="crf2_q46_englisg">PW has signed/given the thumb impression</string>
    <string name="crf2_q46_urdu">PW na ijazat namay par dastakhat ya anghootay ka nishan bh day diya ha</string>
    <string name="crf2_q47_englisg">Reconfirm from the PW that she understands all the procedures</string>
    <string name="crf2_q47_urdu">PW sa aik dafa phir pochain k kya us ko trial ka tareeqaqar achi tarhan samaj a gaya ha</string>
    <string name="crf3a_q14_english">If the PW is eligible for enrollment, was she successfully randomized? </string>
    <string name="crf3a_q14_urdu">Agar LW trial ma shamil k ja sakti ha tu kya us k randomization kar li gya?</string>
    <string name="crf3a_q14_opt_1">Yes (G han)</string>
    <string name="crf3a_q14_opt_2">Withdraw consent</string>
    <string name="crf3a_q14_opt_3">Postponed by PW (Skip to Q24) (PW k taraf sa takheer hoi)</string>
    <string name="crf3a_q14_opt_4">Interrupted by Family (Ghar waloun k madakhalat)</string>
    <string name="crf3a_q14_opt_5">Baby is  sick – unable to avoid the situation (Bacha beemar tha jis k waja sa rukna para)</string>
    <string name="crf3a_q14_opt_6">PW is sick, unable to avoid the situation (PW beemar ha jis k waja sa rukhan para)</string>
    <string name="crf3a_q15_english">Date of randomization</string>
    <string name="crf3a_q15_urdu">null</string>
    <string name="crf3a_q16_english">Time of randomization (hh: mm, 24 hour clock)</string>
    <string name="crf3a_q16_urdu">null</string>
    <string name="crf3a_q17_english">Serial number mentioned on the envelope</string>
    <string name="crf3a_q17_urdu">Janay ka muqsad</string>
    <string name="crf3a_q18_english">Randomization ID</string>
    <string name="crf3a_q18_urdu">Qura andazi k ID</string>
    <string name="crf3a_q19_english">Randomization arm</string>
    <string name="crf3a_q19_urdu">Qura andazi wala arm</string>
    <string name="crf3a_q19_opt_1">Arm A – Control</string>
    <string name="crf3a_q19_opt_2">Arm B – Maamta only</string>
    <string name="crf3a_q19_opt_3">Arm C – Maamta + Azithromycin</string>
    <string name="crf3a_q20_english">If there was a delay of more than 1 hour between completing inclusion/exclusion criteria and randomization, please give reason(s) </string>
    <string name="crf3a_q20_urdu">Agar takheer ka durania 1 ghantay sa zayda ha inlcuion/exclusion or randomization k beech ma tu us k waja likhain</string>
    <string name="crf3a_q21_english">If there was a delay of more than 1 hour between completing inclusion/exclusion criteria and randomization, please give reason(s) </string>
    <string name="crf5a_q19_english">Is PW alive?</string>
    <string name="crf5a_q19_urdu">Kya PW zinda ha?</string>
    <string name="crf5a_q20_english">Date of death</string>
    <string name="crf5a_q20_urdu">Agar maut ho gay tu us k tareekh</string>
    <string name="crf5a_q21_english">Time of death</string>
    <string name="crf5a_q21_urdu">Maut ka waqt</string>
    <string name="crf5a_q22_english">Is woman still pregnant?</string>
    <string name="crf5a_q22_urdu">khatoon abhi b pregnant hai?</string>
    <string name="crf5a_q41_english">How do you rate your current state of health?</string>
    <string name="crf5a_q41_urdu"></string>
    <string name="crf5a_q41_opt_1">Perfectly fine</string>
    <string name="crf5a_q41_opt_2">Moderate</string>
    <string name="crf5a_q41_opt_3">Unwell</string>
</resources>