<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.crf5Fragments.crf5aFragments.Crf5aQ41Fragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--heading-->
        <TextView
            android:layout_gravity="center"
            android:text="General Health"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--Q41 -->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q41_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q41_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <RadioGroup
                android:layout_gravity="center"
                android:id="@+id/rg_q41"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:tag="1"
                    android:textColor="@color/black"
                    android:text="@string/crf5a_q41_opt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:tag="2"
                    android:textColor="@color/black"
                    android:text="@string/crf5a_q41_opt_2"                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:tag="3"
                    android:textColor="@color/black"
                    android:text="@string/crf5a_q41_opt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


    </LinearLayout>



</ScrollView>