<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.crf5Fragments.crf5aFragments.Crf5aQ19Fragment">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Q19-->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q19_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q19_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <RadioGroup
                android:layout_gravity="center"
                android:id="@+id/rg_q19"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:tag="1"
                    android:textColor="@color/black"
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:tag="2"
                    android:textColor="@color/black"
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RadioGroup>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <!--Q20-->
        <LinearLayout
            android:id="@+id/ll_q20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q20_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf5a_q20_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>


            <TextView
                android:id="@+id/tv_dod"
                android:textSize="20sp"
                android:drawableLeft="@mipmap/calendar"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Date"
                />



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        <!--Q21-->
        <LinearLayout
            android:id="@+id/ll_q21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q21_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf5a_q21_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>



            <TextView
                android:id="@+id/tv_dod_time"
                android:textSize="20sp"
                android:drawableLeft="@drawable/time"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Time"
                />



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <!--Q22-->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q22_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf5a_q22_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <RadioGroup
                android:layout_gravity="center"
                android:id="@+id/rg_q22"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:tag="1"
                    android:textColor="@color/black"
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:tag="2"
                    android:textColor="@color/black"
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RadioGroup>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <Button
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/btn_next"
            android:text="@string/next"
            android:textSize="18sp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_color"
            android:layout_marginBottom="30dp" />


    </LinearLayout>



</FrameLayout>